--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -20,42 +20,54 @@
 }*/
 /* defining custom colors for use on the site */
 	.text-sr-primary {
-		color: lightseagreen; /* Hex = 20B2AA */
+		/*color: lightseagreen;*/ /* Hex = 20B2AA */
+		color: #8DB0C0;
 	}
 	.border-sr-primary {
-		border-color: lightseagreen !important; /* Hex = 20B2AA */
+		/*border-color: lightseagreen !important;*/ /* Hex = 20B2AA */
+		border-color: #8DB0C0 !important;
 	}
 	.btn.btn-sr-primary {
-		background-color: lightseagreen; /* Hex = 20B2AA */
-		border-color: lightseagreen;
+		/*background-color: lightseagreen;*/ /* Hex = 20B2AA */
+		/*border-color: lightseagreen;*/
+		background-color: #8DB0C0;
+		border-color: #8DB0C0;
 	}
 	.btn.btn-sr-primary:hover:not([disabled]) {
 		filter: brightness(85%);
 	}
 
 	.text-sr-secondary {
-		color: teal; /* Hex = 008080 */
+		/*color: teal;*/ /* Hex = 008080 */
+		color: #396C81;
 	}
 	.border-sr-secondary {
-		border-color: teal !important; /* Hex = 008080 */
+		/*border-color: teal !important;*/ /* Hex = 008080 */
+		border-color: #396C81 !important;
 	}
 	.btn.btn-sr-secondary {
-		background-color: teal; /* Hex = 008080 */
-		border-color: teal;
+		/*background-color: teal;*/ /* Hex = 008080 */
+		/*border-color: teal;*/
+		background-color: #396C81;
+		border-color: #396C81;
 	}
 	.btn.btn-sr-secondary:hover:not([disabled]) {
 		filter: brightness(85%);
 	}
 
 	.text-sr-link {
-		color: turquoise; /* Hex = 40E0D0 */
+		/*color: turquoise;*/ /* Hex = 40E0D0 */
+		color: #5D899C;
 	}
 	.border-sr-link {
-		border-color: turquoise !important; /* Hex = 40E0D0 */
+		/*border-color: turquoise !important;*/ /* Hex = 40E0D0 */
+		border-color: #5D899C !important;
 	}
 	.btn.btn-sr-link {
-		background-color: turquoise; /* Hex = 40E0D0 */
-		border-color: turquoise;
+		/*background-color: turquoise;*/ /* Hex = 40E0D0 */
+		/*border-color: turquoise;*/
+		background-color: #5D899C;
+		border-color: #5D899C;
 	}
 	.btn.btn-sr-link:hover:not([disabled]) {
 		filter: brightness(85%);
@@ -76,16 +88,38 @@
 	}
 
 	.text-sr-light {
-		color: gainsboro; /* Hex = DCDCDC */
+		/*color: gainsboro;*/ /* Hex = DCDCDC */
+		color: #E9F2F5;
 	}
 	.border-sr-light {
-		border-color: gainsboro !important; /* Hex = DCDCDC */
+		/*border-color: gainsboro !important;*/ /* Hex = DCDCDC */
+		border-color: #E9F2F5 !important;
 	}
 	.btn.btn-sr-light {
-		background-color: gainsboro; /* Hex = DCDCDC */
-		border-color: gainsboro;
+		/*background-color: gainsboro;*/ /* Hex = DCDCDC */
+		/*border-color: gainsboro;*/
+		background-color: #E9F2F5;
+		border-color: #E9F2F5;
 	}
 	.btn.btn-sr-light:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
+
+	.text-sr-light-2 {
+		/*color: gainsboro;*/ /* Hex = DCDCDC */
+		color: #BED5DF;
+	}
+	.border-sr-light-2 {
+		/*border-color: gainsboro !important;*/ /* Hex = DCDCDC */
+		border-color: #BED5DF !important;
+	}
+	.btn.btn-sr-light-2 {
+		/*background-color: gainsboro;*/ /* Hex = DCDCDC */
+		/*border-color: gainsboro;*/
+		background-color: #BED5DF;
+		border-color: #BED5DF;
+	}
+	.btn.btn-sr-light-2:hover:not([disabled]) {
 		filter: brightness(85%);
 	}
 
@@ -175,33 +209,39 @@
 	    color: dimgray !important;
 	}*/
 	a {
-		color: darkturquoise;
+		/*color: darkturquoise;*/
+		color: #5D899C;
 	}
 	a:hover {
-		color: mediumturquoise;
+		/*color: mediumturquoise;*/
+		color: #BED5DF;
 	}
 	a:visited {
-		color: darkturquoise;
+		/*color: darkturquoise;*/
+		color: #5D899C;
 	}
 	a:active {
-		color: turquoise;
+		/*color: turquoise;*/
+		color: #8DB0C0;
 	}
 	a.nav-link.active {
-		color: turquoise !important;
+		/*color: turquoise !important;*/
+		color: #8DB0C0 !important;
 	}
 	a.nav-item.nav-link.active {
-		color: lightseagreen !important;
+		/*color: lightseagreen !important; */
+		color: #8DB0C0 !important;
 		font-weight: 500 !important;
 	}
 	li.page-item .page-link {
-		/*color: turquoise !important;*/
-		color: mediumturquoise !important;
+		/*color: mediumturquoise !important;*/
+		color: #5D899C !important;
 	}
 	li.page-item.active .page-link {
-		/*background-color: turquoise !important;
-		border-color: turquoise !important;*/
-		background-color: mediumturquoise !important;
-		border-color: mediumturquoise !important;
+		/*background-color: mediumturquoise !important;*/
+		/*border-color: mediumturquoise !important;*/
+		background-color: #8DB0C0 !important;
+		border-color: #8DB0C0 !important;
 		color: white !important;
 	}
 	a.link-unstyled {
@@ -228,5 +268,29 @@
 	    vertical-align: inherit;
 	  }
 	}
+
+	/*table.dataTable {
+		border-color: #8DB0C0 !important;
+	}
+	table.dataTable tbody{
+		border-color: #8DB0C0 !important;
+	}
+	table.dataTable thead{
+		border-color: #8DB0C0 !important;
+	}*/
+	table.dataTable th {
+		/*background-color: #5D899C !important;*/
+		background-color: #BED5DF !important;
+		/*border-color: #8DB0C0 !important;*/
+	}
+	table.dataTable tr.odd {
+		background-color: #E9F2F5 !important;
+	}
+	table.dataTable tr.even {
+		/*background-color: #BED5DF !important;*/
+		/*background-color: #E5ECEF !important;*/
+	}
+
+
 </style>
 <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">-->
