--- a/docs/_includes/player_stat_page.html
+++ b/docs/_includes/player_stat_page.html
@@ -86,7 +86,7 @@
 
   // add searchbar
   var gameId = getGameId('{{page.game}}');
-  createPlayerSearchbar(gameId);
+  buildPlayerSearchbar(gameId,prefetch=false);
 </script>
 
 
