--- a/docs/_includes/dbtable.html
+++ b/docs/_includes/dbtable.html
@@ -220,8 +220,9 @@
 					responsive: true,
 					ordering: true,
 					paging: true,        
-					//"autoWidth": false, 	
-					"order": [[ 3, "asc" ],[4,"desc"]],
+					//"autoWidth": false,
+					//"order": [[3, "asc"],[5,"desc"]],
+					"order": [[5,"desc"]],
 					"dom": "<'row p-2'<'col-6'l><'col-6'f>><'row'<'col-12't>><'row p-2'<'col-6'i><'col-6'p>>",
 					//"dom": '<"top"iflp<"clear">>rt<"bottom"iflp<"clear">>',
 					//scrollY: 200,
@@ -256,8 +257,9 @@
 					responsive: true,
 					ordering: true,
 					paging: true,       
-					//"autoWidth": false,  	
-					"order": [[ 3, "asc" ],[4,"desc"]],
+					//"autoWidth": false,
+					//"order": [[3, "asc"],[5,"desc"]],
+					"order": [[5,"desc"]],
 					"dom": "<'row p-2'<'col-6'l><'col-6'f>><'row'<'col-12't>><'row p-2'<'col-6'i><'col-6'p>>",
 					//"dom": '<"top"iflp<"clear">>rt<"bottom"iflp<"clear">>',
 					//scrollY: 200,
@@ -287,8 +289,9 @@
 					responsive: true,
 					ordering: true,
 					paging: true,
-					//"autoWidth": false,      	
-					"order": [[ 3, "asc" ],[4,"desc"]],
+					//"autoWidth": false,
+					//"order": [[3, "asc"],[5,"desc"]],
+					"order": [[5,"desc"]],
 					"dom": "<'row p-2'<'col-6'l><'col-6'f>><'row'<'col-12't>><'row p-2'<'col-6'i><'col-6'p>>",
 					//"dom": '<"top"iflp<"clear">>rt<"bottom"iflp<"clear">>',
 					//scrollY: 200,
