--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -27,6 +27,10 @@
 		/*border-color: lightseagreen !important;*/ /* Hex = 20B2AA */
 		border-color: #8DB0C0 !important;
 	}
+	.bg-sr-primary {
+		/*background-color: lightseagreen !important;*/ /* Hex = 20B2AA */
+		background-color: #8DB0C0 !important;
+	}
 	.btn.btn-sr-primary {
 		/*background-color: lightseagreen;*/ /* Hex = 20B2AA */
 		/*border-color: lightseagreen;*/
@@ -44,6 +48,10 @@
 	.border-sr-secondary {
 		/*border-color: teal !important;*/ /* Hex = 008080 */
 		border-color: #396C81 !important;
+	}
+	.bg-sr-secondary {
+		/*background-color: teal !important;*/ /* Hex = 008080 */
+		background-color: #396C81 !important;
 	}
 	.btn.btn-sr-secondary {
 		/*background-color: teal;*/ /* Hex = 008080 */
@@ -63,6 +71,10 @@
 		/*border-color: turquoise !important;*/ /* Hex = 40E0D0 */
 		border-color: #5D899C !important;
 	}
+	.bg-sr-link {
+		/*background-color: turquoise !important;*/ /* Hex = 40E0D0 */
+		background-color: #5D899C !important;
+	}
 	.btn.btn-sr-link {
 		/*background-color: turquoise;*/ /* Hex = 40E0D0 */
 		/*border-color: turquoise;*/
@@ -79,6 +91,9 @@
 	.border-sr-dark {
 		border-color: dimgray !important; /* Hex = 696969 */      /* nice */
 	}
+	.bg-sr-dark {
+		background-color: dimgray !important; /* Hex = 696969 */      /* nice */
+	}
 	.btn.btn-sr-dark {
 		background-color: dimgray; /* Hex = 696969 */      /* nice */
 		border-color: dimgray;
@@ -94,6 +109,10 @@
 	.border-sr-light {
 		/*border-color: gainsboro !important;*/ /* Hex = DCDCDC */
 		border-color: #E9F2F5 !important;
+	}
+	.bg-sr-light {
+		/*background-color: gainsboro !important;*/ /* Hex = DCDCDC */
+		background-color: #E9F2F5 !important;
 	}
 	.btn.btn-sr-light {
 		/*background-color: gainsboro;*/ /* Hex = DCDCDC */
@@ -113,6 +132,10 @@
 		/*border-color: gainsboro !important;*/ /* Hex = DCDCDC */
 		border-color: #BED5DF !important;
 	}
+	.bg-sr-light-2 {
+		/*background-color: gainsboro !important;*/ /* Hex = DCDCDC */
+		background-color: #BED5DF !important;
+	}
 	.btn.btn-sr-light-2 {
 		/*background-color: gainsboro;*/ /* Hex = DCDCDC */
 		/*border-color: gainsboro;*/
@@ -129,6 +152,9 @@
 	.border-sr-info {
 		border-color: slateblue !important; /* Hex = 6A5ACD */
 	}
+	.bg-sr-info {
+		background-color: slateblue !important;
+	}
 	.btn.btn-sr-info {
 		background-color: slateblue; /* Hex = 6A5ACD */
 		border-color: slateblue;
@@ -143,6 +169,9 @@
 	.border-sr-danger {
 		border-color: crimson !important; /* Hex = DC143C */
 	}
+	.bg-sr-danger {
+		background-color: crimson !important; /* Hex = DC143C */
+	}
 	.btn.btn-sr-danger {
 		background-color: crimson; /* Hex = DC143C */
 		border-color: crimson;
@@ -153,47 +182,84 @@
 
 	/* "trophy" colors */
 	.border-sr-top5 {
-		border-color: #f4666f !important; /* soft red */
+		/*border-color: #f4666f !important;*/ /* soft red */
+		border-color: #DED460 !important; /* yellow */
+	}
+	.bg-sr-top5 {
+		/*border-color: #f4666f !important;*/ /* soft red */
+		background-color: #DED460 !important; /* yellow */
 	}
 	.text-sr-top5 {
-		color: #f4666f; /* soft red */
+		/*color: #f4666f;*/ /* soft red */
+		color: #DED460; /* yellow */
 	}
 
 	.border-sr-top10 {
-		border-color: #b788ea !important; /* lavender */
+		/*border-color: #b788ea !important;*/ /* lavender */
+		border-color: #AEDA84 !important; /* lime green */
+	}
+	.bg-sr-top10 {
+		/*border-color: #b788ea !important;*/ /* lavender */
+		background-color: #AEDA84 !important; /* lime green */
 	}
 	.text-sr-top10 {
-		color: #b788ea; /* lavender */
+		/*color: #b788ea;*/ /* lavender */
+		color: #AEDA84; /* lime green */
 	}
 
 	.border-sr-top20 {
-		border-color: #60a2e5 !important; /* soft blue */
+		/*border-color: #60a2e5 !important;*/ /* soft blue */
+		border-color: #86D48F !important; /* soft green */
+	}
+	.bg-sr-top20 {
+		/*border-color: #60a2e5 !important;*/ /* soft blue */
+		background-color: #86D48F !important; /* soft green */
 	}
 	.text-sr-top20 {
-		color: #60a2e5; /* soft blue */
+		/*color: #60a2e5;*/ /* soft blue */
+		color: #86D48F; /* soft green */
 	}
 
 	.border-sr-top50 {
-		border-color: #4ae2d8 !important;   /* cyan */
+		/*border-color: #4ae2d8 !important;*/   /* cyan */
 		/*border-color: #e5be30 !important;*/   /* gold */
+		border-color: #71C8A3 !important;   /* blue-green */
+	}
+	.bg-sr-top50 {
+		/*border-color: #4ae2d8 !important;*/   /* cyan */
+		/*border-color: #e5be30 !important;*/   /* gold */
+		background-color: #71C8A3 !important;   /* blue-green */
 	}
 	.text-sr-top50 {
-		color: #4ae2d8;   /* cyan */
+		/*color: #4ae2d8;*/   /* cyan */
 		/*color: #e5be30;*/   /* gold */
+		color: #71C8A3;   /* blue-green */
 	}
 
 	.border-sr-top100 {
-		border-color: #a0a0a0 !important;   /* silver */
+		/*border-color: #a0a0a0 !important;*/   /* silver */
+		border-color: #76B5BE !important;   /* teal */
+	}
+	.bg-sr-top100 {
+		/*border-color: #a0a0a0 !important;*/   /* silver */
+		background-color: #76B5BE !important;   /* teal */
 	}
 	.text-sr-top100 {
-		color: #a0a0a0;   /* silver */
+		/*color: #a0a0a0;*/   /* silver */
+		color: #76B5BE;   /* teal */
 	}
 
 	.border-sr-top500 {
-		border-color: #bf780f !important;   /* bronze */
+		/*border-color: #bf780f !important;*/   /* bronze */
+		border-color: #8DB0C0 !important;   /* sr-primary slate blue */
+	}
+	.bg-sr-top500 {
+		/*border-color: #bf780f !important;*/   /* bronze */
+		background-color: #8DB0C0 !important;   /* sr-primary slate blue */
 	}
 	.text-sr-top500 {
-		color: #bf780f;   /* bronze */
+		/*color: #bf780f;*/   /* bronze */
+		color: #8DB0C0;   /* sr-primary slate blue */
 	}
 
 	/*
@@ -244,6 +310,9 @@
 		border-color: #8DB0C0 !important;
 		color: white !important;
 	}
+	a.collapse-text:hover:not([disabled]) {
+		filter: brightness(85%);
+	}
 	a.link-unstyled {
 	  &,
 	  &:visited,
@@ -288,7 +357,7 @@
 	}
 	table.dataTable tr.even {
 		/*background-color: #BED5DF !important;*/
-		/*background-color: #E5ECEF !important;*/
+		background-color: #FFFFFF !important;
 	}
 
 
