--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-sr-light rounded">
 	<a class="navbar-brand" href="#">
 		<!--<span class="text-dark">Smash</span>
 		<span class="text-sr-primary">Ranks</span>-->
-		<img src="/assets/images/site_icons/sr_logo_new.png" width="30" height="30">
+		<img src="/assets/images/site_icons/sr_logo_bordered.png" width="30" height="30">
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_main" aria-controls="navbar_main" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
