--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.18/b-1.5.4/r-2.2.2/datatables.min.css"/>
 -->
 
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css">
 <!-- icons stylesheet -->
@@ -19,6 +19,36 @@
     content: '\03b2';
 }*/
 /* defining custom colors for use on the site */
+
+	/*
+	@media (max-width: 978px) {
+		.container {
+			padding: 0;
+			margin: 0;
+		}
+
+		body {
+			padding: 0;
+		}
+
+		.navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
+			margin-left: 0;
+			margin-right: 0;
+			margin-bottom: 0;
+		}
+	}
+
+	@media (min-width: 978px){
+		.container {
+			width: 65vw;
+		}
+	}
+	*/
+
+	.page-section {
+		width:100%;
+	}
+
 	.text-sr-primary {
 		/*color: lightseagreen;*/ /* Hex = 20B2AA */
 		color: #8DB0C0;
