--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-sr-light rounded">
+<nav class="navbar navbar-expand-md navbar-light bg-sr-light rounded">
 	<a class="navbar-brand" href="#">
 		<!--<span class="text-dark">Smash</span>
 		<span class="text-sr-primary">Ranks</span>-->
