--- a/docs/_layouts/ranking.html
+++ b/docs/_layouts/ranking.html
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container" style="width:65vw;">
+    <div class="container d-block">
       <header>
         {% include navigation.html %}
         <!--
