--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer h-card">
+<footer class="site-footer h-card page-section">
   <data class="u-url" href="/"></data>
 
   <div class="container wrapper">
