--- a/docs/_layouts/pretty.html
+++ b/docs/_layouts/pretty.html
@@ -22,50 +22,56 @@
     </style>
   </head>
   <body>
-    <div class="container" style="width:65vw;">
-      <header>
-        {% include navigation.html %}
-        
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
+    <div class="container d-block">
+      <div id="pageNavbar" class="row">
+        <header class="page-section">
+          {% include navigation.html %}
+          
+          {% if site.logo %}
+            <img src="{{site.logo | relative_url}}" alt="Logo" />
+          {% endif %}
 
-        <!--
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-         -->
+          <!--
+          {% if site.github.is_project_page %}
+          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+          {% endif %}
+           -->
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+          {% if site.github.is_user_page %}
+          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+          {% endif %}
 
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+          {% if site.show_downloads %}
+          <ul class="downloads">
+            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          </ul>
+          {% endif %}
 
-      </header>
+        </header>
+      </div>
       <!-- line break -->
       <p class="invisible">
         &nbsp;
       </p>
-      <section>
-        {% if page.game %}
-          {% if page.title != 'Directory' and page.title != 'Home' and page.title != '{{page.game}}' %}
-            {% include page_heading.html %}
+      <div id="pageHeader" class="row">
+        <section>
+          {% if page.game %}
+            {% if page.title != 'Directory' and page.title != 'Home' and page.title != '{{page.game}}' %}
+              {% include page_heading.html %}
+            {% endif %}
           {% endif %}
-        {% endif %}
-      </section>
-      <section>
-
-      {{ content }}
-
-      </section>
-      {% include footer.html %}
+        </section>
+      </div>
+      <div id="pageContent" class="row">
+        <section class="page-section">
+          {{ content }}
+        </section>
+      </div>
+      <div id="pageFooter" class="row">
+        {% include footer.html %}
+      </div>
     </div>
 
     <!-- Mobile scaling fix -->
